# sqlite

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  Makefile  README.md  db.c  db.h  main.c  meson.build  result.txt
include/: db.h  dbg.h  minunit.h
include/add/: add.h
include/db/: db.h
spec/: CMakeLists.txt  main_spec.rb
src/: db.c  db.h  main.c  main.c.orig  meson.build  minunit.h
src/add/: add.c
src/db/: db.c
subprojects/googletest-release-1.12.1/: .meson-subproject-wrap-hash.txt
test/: CMakeLists.txt  db_test.c  db_test.cpp  meson.build
test/add/: test_add.c
test/db/: gtest_db.cpp
test/testdata/: input_buffer.txt
